--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ASP.NET Web Application",
+  "name": "ASP.NET Solution",
   "description": "ASP.NET Solution Template for Visual Studio",
   "repository": "https://github.com/KriaSoft/ASP.NET-Solution",
   "devDependencies": {
