--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ASP.NET Solution",
+  "name": "asp.net-solution",
   "description": "ASP.NET Solution Template for Visual Studio",
   "repository": "https://github.com/KriaSoft/ASP.NET-Solution",
   "devDependencies": {
-    "phantomjs" : "~1.9",
-    "karma" : "~0.10",
-    "karma-junit-reporter" : "~0.1",
-    "karma-jasmine" : "~0.1",
-    "karma-ng-scenario" : "~0.1"
+    "grunt": "~0.4.2",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
